src/sql/workbench/contrib/welcome/page/browser/welcomePage.css
/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Microsoft Corporation. All rights reserved.
 *  Licensed under the Source EULA. See License.txt in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

.ads_homepage .ads_grid {
	display: grid;
	grid-gap: 16px;
	grid-row-gap: 16px;
}

.ads_homepage .ads_grid.grip_gap--50 {
	grid-gap: 50px;
}

.ads_homepage .ads_grid.sm--cols-1 {
	grid-template-columns: 1fr;
}

.ads_homepage .ads_grid.sm--cols-2 {
	grid-template-columns: 1fr 1fr;
}

@media only screen and (min-width: 640px) {
	.ads_homepage .ads_grid.lg--cols-2 {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media only screen and (min-width: 1024px) {
	.ads_homepage .ads_grid.xl--cols-4 {
		grid-template-columns: repeat(4, 1fr);
	}
	.ads_homepage .ads_grid.xl--cols-12 {
		grid-template-columns: repeat(12, 1fr);
	}
}

@media only screen and (min-width: 1365px) {
	.ads_homepage .ads_grid.xxl--cols-8 {
		grid-template-columns: repeat(8, 1fr)
	}
}

.ads_homepage .col--sm--start_1__span_1 {
	grid-column: 1 / span 1;
}

.ads_homepage .col--sm--start_1__span_2 {
	grid-column: 1 / span 2;
}

@media only screen and (min-width: 1024px) {
	.ads_homepage .col--xl--start_9__span_6 {
		grid-column: 9 / span 6;
	}
	.ads_homepage .col--xl--start_1__span_7 {
		grid-column: 1 / span 7;
	}
}

@media only screen and (min-width: 1365px) {
	.ads_homepage .col--xxl--start_1__span_4 {
		grid-column: 1 / span 4;
	}
	.ads_homepage .col--xxl--start_5__span_4 {
		grid-column: 5 / span 4;
	}
	.ads_homepage .row--xxl--start_1__span_2 {
		grid-row: 1 / span 2;
	}
	.ads_homepage .row--xxl--start_1__span_4 {
		grid-row: 1 / span 4;
	}
}

.ads_homepage {
	max-width: 1920px;
	font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
}

.ads_homepage h1, .ads_homepage h2, .ads_homepage h3, .ads_homepage h4, .ads_homepage h5, .ads_homepage p {
	margin: 0;
}

.ads_homepage h1 {
	font-size: 3em;
	font-weight: normal;
}

.ads_homepage h2 {
	font-size: 1.5em;
	font-weight: 600;
}

.ads_homepage h3 {
	font-size: 1.16em;
	font-weight: 600;
}

.ads_homepage h4 {
	font-weight: 600;
}

.ads_homepage p {
	font-size: 1em;
}

.ads_homepage a {
	text-decoration: none;
}

.ads_homepage .caption {
	position: relative;
	bottom: 3px;
	font-size: 1.08em;
}

.ads_homepage .content:not(.extensions) {
	margin: 8px 0;
}

.ads_homepage .flex {
	display: flex;
}

.ads_homepage .flex.flex--d_column {
	flex-direction: column;
}

.ads_homepage .flex.flex--d_row {
	flex-direction: row;
}

.ads_homepage .flex.flex--wrap {
	flex-wrap: wrap;
}

.ads_homepage .flex.flex--j_center {
	justify-content: center;
}

.ads_homepage .flex.flex--j_evenly {
	justify-content: space-evenly;
}

.ads_homepage .flex.flex--j_end {
	justify-content: flex-end;
}

.ads_homepage .flex.flex--a_center {
	align-items: center;
}

.ads_homepage .flex.flex--a_start {
	align-items: flex-start;
}

.ads_homepage .flex.flex--j_between {
	justify-content: space-between;
}

.ads_homepage .a_self--end {
	align-self: flex-end;
}

.ads_homepage .btn_container {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

@media only screen and (min-width: 480px) {
	.ads_homepage .btn_container {
		flex-direction: row;
		justify-content: flex-start;
	}
}

.ads_homepage .btn {
	box-sizing: border-box;
	width: 100%;
	height: 34px;
	padding-top: 1px;
	font-size: 1.08em;
	line-height: 29px;
	border-radius: 2px;
	display: flex;
	align-content: center;
	justify-content: center;
	text-align: center;
	text-decoration: none;
	margin: 10px 0;
}

.ads_homepage .btn span {
	display: block;
}

@media only screen and (max-width: 389px) {
	.ads_homepage .btn {
		line-height: 27px;
	}
}

@media only screen and (min-width: 480px) {
	.ads_homepage .btn {
		margin: 0 8px 0 0;
		width: 77px;
		height: 25px;
		line-height: 18px;
	}
	.mac .ads_homepage .dropdown.btn {
		line-height: 1.6em;
	}
}

.ads_homepage .btn--primary {
	border: 1px solid;
}

.ads_homepage .btn--primary:hover {
	cursor: pointer;
}

.ads_homepage .btn--standard:hover {
	cursor: pointer;
}

.ads_homepage #dropdown_btn:focus {
	outline: 1px solid;
}

.ads_homepage .dropdown-content {
	z-index: 9;
	position: absolute;
	display: none;
	box-sizing: border-box;
	border-radius: 4px;
	list-style: none;
	padding: 8px 0px;
	margin: 0;
}

.ads_homepage .dropdown-content li {
	font-size: 1em;
}

.ads_homepage .dropdown-content li a {
	display: block;
	width: 69%;
	height: 100%;
	padding: 5px 20px;
}

.dropdown-content.show {
	position: absolute;
	display: block;
}

.ads_homepage .btn.dropdown ul li:hover>ul, .ads_homepage .btn.dropdown ul li ul:hover {
	z-index: 9;
}

.ads_homepage .btn.dropdown ul li ul li {
	width: 78%;
	padding: 1em 1em 1em 1.5em;
	clear: both;
	font-size: 1.16em;
	text-align: left;
	border: 1px solid;
}

.ads_homepage .btn.dropdown ul li ul li a {
	text-decoration: none;
}

.ads_homepage .btn:disabled {
	width: auto;
	height: 24px;
	padding: 4px 16px;
	border: 0 !important;
}

.ads_homepage .btn:disabled:hover {
	cursor: default;
}

.ads_homepage .icon--arrow_down {
	display: inline-block;
	width: 11px;
	height: 6px;
	margin-left: 6px;
	padding-top: 3px;
	background: url('../../arrowDown.svg');
	background-size: 11px 6px;
	background-repeat: no-repeat;
	background-position: right center;
}

.ads_homepage .icon--arrow_right {
	display: inline-block;
	width: 16px;
	height: 16px;
	margin-left: 6px;
	padding-top: 3px;
	margin-top: 2px;
	-webkit-mask: url('../../arrowRightIcon.svg') no-repeat;
	-webkit-mask-size: 13px 16px;
	mask: url('../../arrowRightIcon.svg') no-repeat;
	mask-size: 13px 16px;
	height: 16px;
	width: 16px;
}
/* ... */

